# kiwoom_stock_telegram

./: .env.example  .env.sample  .gitignore  CLAUDE.md  CODE_IMPROVEMENT_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  auto_trading.py  auto_trading_no_telegram.py  config.py  debug_parsing_issue.py  exceptions.py  kiwoom_order.py  kiwoom_websocket.py  main.py  order_executor.py  price_monitor.py  pyproject.toml  recent_messages.py  reference_auto_trading.py  setup_telegram.txt  test_buy_simulation.py  test_channel_messages.py  test_code_validation.py  test_comprehensive_parsing.py  test_config_validation.py  test_empty_stock_name.py  test_error_handling.py  test_force_sell_simulation.py  test_limit_buy_quantity.py  test_new_channel_analysis.py  test_new_parsing_logic.py  test_normal_message.py  test_outstanding_cancel.py  test_price_table.py  test_real_channel_final.py  test_safety_margin_analysis.py  test_safety_margin_removed.py  test_sell_flow.py  test_simulation.py  (+6 more)
gui/: README.md  app.py
gui/utils/: __init__.py  process_monitor.py  telegram_auth.py
portable/: BUILD_VERIFICATION.md  QUICK_START.md  README.md  build.bat  build_portable.bat  build_portable.ps1  launcher.py  setup_gui.py  setup_gui.spec
portable/docs/: DEPLOY.md  USER_GUIDE.md
portable/scripts/: setup.bat  start.bat  stop.bat
portable/templates/: .env.template
scripts/: telegram_auth.py
